2004-12-20  Benoît Dejean  <tazforever@dlfp.org>

	* NEWS:
	* configure.in: Released 2.9.3.

2004-12-17  Benoît Dejean  <tazforever@dlfp.org>

	* src/proctable.c: (cb_exclude), (refresh_list): Fixed a nasty crash :
	make sure a process is not added AND removed at the same time.
	Closes #161350.

2004-12-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Added "th" (Thai) to ALL_LINGUAS.

2004-12-06  Benoît Dejean  <tazforever@dlfp.org>

	* src/procman.c: (main): Added missing gnome-vfs init/shutdown.

2004-12-06  Benoît Dejean  <tazforever@dlfp.org>

	* src/callbacks.c: (get_icon_for_device), (add_new_disks): Doesn't crash if
	gnome_vfs_volume_monitor_get_volume_for_path returns NULL.
	Closes #160560.

2004-11-30  Benoît Dejean  <tazforever@dlfp.org>

	* configure.in: post-release bump to 2.9.1.

2004-11-30  Benoît Dejean  <tazforever@dlfp.org>

	* NEWS: released 2.9.0

2004-11-30  Benoît Dejean  <tazforever@dlfp.org>

	* src/interface.c: (create_main_window), (update_sensitivity):
	* src/interface.h:
	* src/prettytable.c: (pretty_table_new):
	* src/prettytable.h:
	* src/procman.c: (procman_data_new), (procman_save_config), (main):
	* src/procman.h:
	* src/proctable.c: (proctable_update_list): Big cleanup.
	Removed SimpleView dead code.
	Removed popt stuff.
	Moved global src/procman.c::app to ProcData struct.

2004-11-30  Benoît Dejean  <tazforever@dlfp.org>

	* configure.in: Depends on libgtop-2.8.2.
	
	* src/procman.h:
	* src/proctable.c: (remove_children_from_tree), (update_info),
	(refresh_list): Removed que queue tag. Instead of tagging - then iterating
	to find tagged ProcInfo, uses a removal_list and addition_list. This is
	also a great speedup !
	
	ProcInfo is fully updated only when needed (is_visible and is displayed).
	I think this is safe.
		
	gnome-system-monitor seems a bit faster : 2.6.0 eats 35% CPU with 200 processes
	refresh every sec, where current uses about 27% CPU on my ibook 1GHZ.
