@@ -1,3 +1,11 @@
+2004-12-24  Benoît Dejean  <tazforever@dlfp.org>
+
+	* src/interface.c: (create_sys_view):
+	* src/load-graph.c: (get_memory): "Used Memory" -> "User Memory".
+	Closes #94219.
+
+	* src/procman.h: Removed unused enum.
+
 2004-12-20  Benoît Dejean  <tazforever@dlfp.org>
 
 	* NEWS:
